--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,9 @@
 
     --color-highlight: oklch(0.269 0 0);
     --color-highlight-text: oklch(0.985 0 0);
-    
+
+    --color-danger: oklch(0.396 0.141 25.723);
+
     --color-border: oklch(0.269 0 0);
     --color-input: oklch(0.269 0 0);
     --color-ring: oklch(0.439 0 0);
